--- a/index.ejs
+++ b/index.ejs
@@ -13,6 +13,15 @@
         <div role="main">
             <p><%=content %>.</p>
             <p><a href="/other">other pageに移動 &gt;&gt;</a></p>
+            <form method="post" action="/other">
+                <input type="text" name="msg" class="form-control">
+                <input type="submit" value="Click" class="btn btn-primary">
+            </form>
+            <% var id = 0; %>
+            <% for(var key in data){ %>
+            <%- include('data_item',
+                {id:++id, key:key, val:[data[key]]}) %>
+            <% }%>
         </div>
     </body>
 </html>
